# Rubiks-Cube-Solver

./: README.md
cuboCamaraUpdate/: CMakeLists.txt  animation.h  camaraAnimations.h  cubito.h  cubo.h  cuboUtilities.h  main.cpp  plainCube.h  rubiks.h  solver.h  transform.h
cuboCamaraUpdate/shader/: -7.4.camera.fs  -7.4.camera.vs  7.1.camera.fs  7.1.camera.vs  shader.h
